--- a/src/Components/Poster/Poster.css
+++ b/src/Components/Poster/Poster.css
@@ -33,6 +33,8 @@
   justify-content: space-between;
   gap: 40px;
 }
+.poster-image {
+}
 .poster-right {
   padding: 50px;
 }
@@ -71,4 +73,155 @@
 }
 .logo-container div {
   margin: 10px 60px;
+}
+@media (max-width: 1280px) {
+  .poster-image {
+    max-width: 600px;
+    max-height: 500px;
+  }
+  .poster-container {
+    max-width: 1100px;
+  }
+  .poster-left {
+    max-width: 400px;
+    max-height: 300px;
+  }
+  .poster-left h1 {
+    font-size: 45px;
+    max-width: 250px;
+    font-weight: 700px;
+  }
+  .poster-left p {
+    font-size: 12px;
+    font-weight: 250;
+    max-width: 300px;
+  }
+  .button1 {
+    width: 100px;
+    height: 3rem;
+    border: none;
+    background-color: #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 1px;
+  }
+
+  .logo-container div {
+    margin: 5px 40px;
+  }
+}
+@media (max-width: 1080px) {
+  .poster-image {
+    max-width: 270px;
+    max-height: 400px;
+  }
+  .poster-container {
+    max-width: 700px;
+  }
+  .poster-left {
+    max-width: 400px;
+    max-height: 300px;
+  }
+  .poster-right {
+    padding: 0px;
+  }
+  .poster-left h1 {
+    font-size: 45px;
+    max-width: 250px;
+    font-weight: 700px;
+  }
+  .poster-left p {
+    font-size: 12px;
+    font-weight: 250;
+    max-width: 300px;
+  }
+  .button1 {
+    width: 100px;
+    height: 3rem;
+    border: none;
+    background-color: #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+  }
+  .logo-container div {
+    margin: 0px 20px;
+  }
+}
+@media (max-width: 500px) {
+  .poster-image {
+    max-width: 270px;
+    max-height: 300px;
+  }
+  .poster-container {
+    max-width: 400px;
+    flex-direction: column;
+  }
+  .poster-left {
+    max-width: 400px;
+    max-height: 300px;
+  }
+  .poster-right {
+    padding: 0px;
+  }
+  .poster-left h1 {
+    font-size: 45px;
+    max-width: 250px;
+    font-weight: 700px;
+  }
+  .poster-left p {
+    font-size: 12px;
+    font-weight: 250;
+    max-width: 300px;
+  }
+  .button1 {
+    width: 100px;
+    height: 3rem;
+    border: none;
+    background-color: #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+  }
+  .logo-container div {
+    margin: 0px 20px;
+  }
+}
+@media (max-width: 800px) {
+  .poster-image {
+    max-width: 270px;
+    max-height: 400px;
+  }
+  .poster-container {
+    max-width: 600px;
+  }
+  .poster-left {
+    max-width: 400px;
+    max-height: 300px;
+  }
+  .poster-right {
+    padding: 0px;
+  }
+  .poster-left h1 {
+    font-size: 45px;
+    max-width: 250px;
+    font-weight: 700px;
+  }
+  .poster-left p {
+    font-size: 12px;
+    font-weight: 250;
+    max-width: 300px;
+  }
+  .button1 {
+    width: 100px;
+    height: 3rem;
+    border: none;
+    background-color: #000000;
+    color: #fff;
+    font-size: 15px;
+    border-radius: 10px;
+  }
+  .logo-container div {
+    margin: 0px 20px;
+  }
 }
