--- a/src/Components/Streamlined/Streamlined.css
+++ b/src/Components/Streamlined/Streamlined.css
@@ -33,6 +33,8 @@
 .stream-cards {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
 }
 
@@ -41,7 +43,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   box-shadow: 0px 0px 10px 0px rgb(208, 205, 205);
   border-radius: 10px;
   padding: 50px;
@@ -59,4 +60,13 @@
   text-align: center;
   max-width: 270px;
   font-size: 13px;
+}
+@media (max-width: 500px) {
+  .stream-card-left,
+  .stream-card-right {
+    padding: 10px;
+  }
+  .cardsss {
+    max-width: 270px;
+  }
 }
