--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,4 +1,3 @@
-/* Navbar.css */
 * {
   margin: 0px;
   padding: 0px;
@@ -14,18 +13,9 @@
   padding: 10px;
 }
 .navbar-items {
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  top: 60px;
-  left: 0;
-  width: 100%;
-  background-color: #eaeefe;
-  z-index: 1000;
-  align-items: center;
-}
-.navbar-items.show {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .navbar-items li {
   padding: 15px;
@@ -46,6 +36,22 @@
   display: none;
 }
 @media (max-width: 500px) {
+  .navbar-items {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background-color: #eaeefe;
+    z-index: 1000;
+    align-items: center;
+  }
+
+  .navbar-items .show {
+    display: flex;
+  }
+
   .menu-icon {
     display: block;
   }
